# qr-gen

./: Cargo.toml  README.md
src/: batch.rs  color.rs  lib.rs  main.rs  render.rs  vcard.rs
tests/: cli.rs  roundtrip.rs
