[package]
name = "qr-gen"
version = "0.1.0"
edition = "2021"
description = "Generate QR codes (PNG + SVG), single or batch — fully offline."
license = "MIT"
authors = ["smolkai <smolkai@users.noreply.github.com>"]
readme = "README.md"

[[bin]]
name = "qr-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rqrr = "0.10"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
